--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </style>
 </head>
 <body>
-    <h1>ランダムチーム分け（保存・固定・編集対応）</h1>
+    <h1>ドッヂボール地獄カスタム用</h1>
 
     <div class="section">
         <h2>設定</h2>
-        チーム1名: <input type="text" id="team1Name" value="東">
+        チーム1の名前: <input type="text" id="team1Name" value="東">
         人数: <input type="number" id="team1Size" value="3" min="1"><br>
-        チーム2名: <input type="text" id="team2Name" value="西">
+        チーム2の名前: <input type="text" id="team2Name" value="西">
         人数: <input type="number" id="team2Size" value="3" min="1">
     </div>
 
@@ -56,13 +56,13 @@
     </div>
 
     <div class="section">
-        <h2>固定メンバー追加</h2>
+        <h2>絶対にやらないといけない人</h2>
         <select id="fixedSelector"></select>
         <button onclick="addFixedName(1)">チーム1に固定</button>
         <button onclick="addFixedName(2)">チーム2に固定</button>
-        <h3>チーム1固定:</h3>
+        <h3>チーム1に固定:</h3>
         <ul id="fixedList1"></ul>
-        <h3>チーム2固定:</h3>
+        <h3>チーム2に固定:</h3>
         <ul id="fixedList2"></ul>
     </div>
 
