--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>チーム分けツール</title>
+    <title>地獄のドッチ、チーム分け</title>
     <style>
         body {
             font-family: sans-serif;
@@ -38,13 +38,13 @@
     </style>
 </head>
 <body>
-    <h1>ランダムチーム分け（メンバー・抽選分離対応）</h1>
+    <h1>地獄のドッチのチーム分け(地獄のドッチ以外にも使えます)</h1>
 
     <div class="section">
         <h2>設定</h2>
-        チーム1名: <input type="text" id="team1Name" value="東">
+        チーム1の名前: <input type="text" id="team1Name" value="東">
         人数: <input type="number" id="team1Size" value="3" min="1"><br>
-        チーム2名: <input type="text" id="team2Name" value="西">
+        チーム2の名前: <input type="text" id="team2Name" value="西">
         人数: <input type="number" id="team2Size" value="3" min="1">
     </div>
 
@@ -63,26 +63,20 @@
     </div>
 
     <div class="section">
-        <h2>固定メンバー</h2>
+        <h2>絶対にやらないといけないやつ</h2>
         <select id="fixedSelector"></select>
         <button onclick="addFixedName(1)">チーム1に固定</button>
         <button onclick="addFixedName(2)">チーム2に固定</button>
-        <h3>チーム1固定:</h3>
+        <h3>チーム1に固定:</h3>
         <ul id="fixedList1"></ul>
-        <h3>チーム2固定:</h3>
+        <h3>チーム2に固定:</h3>
         <ul id="fixedList2"></ul>
     </div>
 
     <button onclick="shuffleAndDisplay()">チーム分けする</button>
 
-    <h2 id="team1Header">東チーム</h2>
-    <ul id="team1"></ul>
-
-    <h2 id="team2Header">西チーム</h2>
-    <ul id="team2"></ul>
-
-    <h2>観戦</h2>
-    <ul id="spectators"></ul>
+    <h2>結果発表！</h2>
+    <p id="resultText"></p>
 
     <script>
         const defaultNames = [
@@ -249,12 +243,8 @@
             const team2 = [...fixed2, ...pool.splice(0, team2Size - fixed2.length)];
             const spectators = pool;
 
-            document.getElementById("team1Header").innerText = team1Name;
-            document.getElementById("team2Header").innerText = team2Name;
-
-            document.getElementById("team1").innerHTML = team1.map(name => `<li>${name}</li>`).join('');
-            document.getElementById("team2").innerHTML = team2.map(name => `<li>${name}</li>`).join('');
-            document.getElementById("spectators").innerHTML = spectators.map(name => `<li>${name}</li>`).join('');
+            const result = `${team1Name}: ${team1.join(' ')} ${team2Name}: ${team2.join(' ')} 観戦: ${spectators.join(' ')}`;
+            document.getElementById("resultText").innerText = result;
         }
 
         initData();
